fix: clean up CSS and JSX formatting; remove unnecessary line breaks and ensure consistent spacing

--- a/src/index.css
+++ b/src/index.css
@@ -16,8 +16,6 @@ input:-webkit-autofill:focus {
   transition: background-color 5000s ease-in-out 0s;
 }
 
-
-
 /* Light Mode */
 .light {
   /* Base Colors */
@@ -87,7 +85,7 @@ input:-webkit-autofill:focus {
 * {
   @apply transition-colors duration-200;
 }
- /* tip tap color */
+/* tip tap color */
 .ProseMirror strong,
 .ProseMirror b,
 .ProseMirror blockquote {
@@ -130,9 +128,8 @@ input:-webkit-autofill:focus {
 }
 
 .formContainer {
-  @apply flex flex-col w-full max-w-md  py-6 rounded-lg
+  @apply flex flex-col w-full max-w-md  py-6 rounded-lg;
 }
-
 
 .paddingCard {
   @apply p-4 sm:p-5 md:p-6;
@@ -147,7 +144,5 @@ input:-webkit-autofill:focus {
 }
 
 .glassBg {
-  @apply bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-50
+  @apply bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-50;
 }
-
-
